cropped image fixed

--- a/src/assets/css/ui.css
+++ b/src/assets/css/ui.css
@@ -851,8 +851,8 @@ a[class*=card]:hover .title {
   max-width: 100%;
   width: auto;
   display: inline-block;
-  -o-object-fit: cover;
-     object-fit: cover;
+  /* -o-object-fit: cover;
+     object-fit: cover; */
 }
 
 /* GRID STYLE PRODUCT ITEM */
